Update bibliography to remove outdated entries and add recent publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,55 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+% 2025
+@article{rong2025algorithmic,
+  title={Algorithmic iterative reticular synthesis of zeolitic imidazolate framework crystals},
+  author={Rong, Zichao and Chen, Zihao and Luong, Felix and Chheda, Saumil and Luong, Hien TN and Zheng, Zhaoyi and Greco, Kyle and Alghamdi, Abdulaziz A and Bui, Khanh-Huyen and Inizan, Tom J and others},
+  journal={Nature Synthesis},
+  pages={1--11},
+  year={2025},
+  publisher={Nature Publishing Group},
+  doi={10.1038/s44160-025-00939-9}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{vu2025finding,
+  title={Finding environmental-friendly chemical synthesis with AI and high-throughput robotics},
+  author={Vu, Van-Hao and Bui, Khanh-Huyen and Dang, Kieu-Dung D and Duong-Tuan, Manh and Le, Dung D and Nguyen-Dang, Tung},
+  journal={Journal of Science: Advanced Materials and Devices},
+  volume={10},
+  number={1},
+  pages={100818},
+  year={2025},
+  publisher={Elsevier},
+  doi={10.1016/j.jsamd.2024.100818}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+% 2024
+@inproceedings{dao2024experience,
+  title={Experience as Source for Anticipation and Planning: Experiential Policy Learning for Target-driven Recommendation Dialogues},
+  author={Dao, Huy Quang and Deng, Yang and Bui, Khanh-Huyen and Le, Dung D and Liao, Lizi},
+  booktitle={Findings of the Association for Computational Linguistics: EMNLP 2024},
+  pages={14179--14198},
+  year={2024},
+  publisher={Association for Computational Linguistics},
+  url={https://aclanthology.org/2024.findings-emnlp.829/}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+@article{nguyen2024detecting,
+  title={Detecting Out-of-Distribution Objects through Class-Conditioned Inpainting},
+  author={Nguyen, Quang-Huy and Zhou, Jin Peng and Liu, Zhenzhen and Bui, Khanh-Huyen and Weinberger, Kilian Q and Chao, Wei-Lun and Le, Dung D},
+  journal={arXiv preprint arXiv:2402.03292},
+  year={2024},
+  note={Accepted to WACV 2026}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+% 2021
+@inproceedings{le2021aspect,
+  title={Aspect-Based Sentiment Analysis Using Mini-Window Locating Attention for Vietnamese E-commerce Reviews},
+  author={Le-Minh, Binh and Le, Tuan-Phong and Tran, Khanh-Huyen and Bui, Khanh-Huyen and Le, Hoang-Quynh and Can, Duy-Cat and Thanh, Hoang-Nhat-Chau},
+  booktitle={2021 13th International Conference on Knowledge and Systems Engineering (KSE)},
+  pages={1--6},
+  year={2021},
+  organization={IEEE},
+  doi={10.1109/KSE51609.2021.9648637}
 }
