--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,7 @@
 ---
 
 % 2025
+
 @article{rong2025algorithmic,
   title={Algorithmic iterative reticular synthesis of zeolitic imidazolate framework crystals},
   author={Rong, Zichao and Chen, Zihao and Luong, Felix and Chheda, Saumil and Luong, Hien TN and Zheng, Zhaoyi and Greco, Kyle and Alghamdi, Abdulaziz A and Bui, Khanh-Huyen and Inizan, Tom J and others},
@@ -9,7 +10,10 @@
   pages={1--11},
   year={2025},
   publisher={Nature Publishing Group},
-  doi={10.1038/s44160-025-00939-9}
+  doi={10.1038/s44160-025-00939-9},
+  url={https://www.nature.com/articles/s44160-025-00939-9},
+  html={https://www.nature.com/articles/s44160-025-00939-9},
+  pdf={https://www.nature.com/articles/s44160-025-00939-9.pdf}
 }
 
 @article{vu2025finding,
@@ -21,7 +25,10 @@
   pages={100818},
   year={2025},
   publisher={Elsevier},
-  doi={10.1016/j.jsamd.2024.100818}
+  doi={10.1016/j.jsamd.2024.100818},
+  url={https://doi.org/10.1016/j.jsamd.2024.100818},
+  html={https://doi.org/10.1016/j.jsamd.2024.100818},
+  pdf={https://www.sciencedirect.com/science/article/pii/S2468217924001497/pdfft?md5=99106cffa79fb6f46df55f715383ee49&pid=1-s2.0-S2468217924001497-main.pdf}
 }
 
 % 2024
@@ -32,7 +39,8 @@
   pages={14179--14198},
   year={2024},
   publisher={Association for Computational Linguistics},
-  url={https://aclanthology.org/2024.findings-emnlp.829/}
+  url={https://aclanthology.org/2024.findings-emnlp.829/},
+  pdf={https://aclanthology.org/2024.findings-emnlp.829.pdf}
 }
 
 @article{nguyen2024detecting,
@@ -40,10 +48,14 @@
   author={Nguyen, Quang-Huy and Zhou, Jin Peng and Liu, Zhenzhen and Bui, Khanh-Huyen and Weinberger, Kilian Q and Chao, Wei-Lun and Le, Dung D},
   journal={arXiv preprint arXiv:2402.03292},
   year={2024},
-  note={Accepted to WACV 2026}
+  note={Accepted to WACV 2026},
+  url={https://arxiv.org/abs/2402.03292},
+  html={https://arxiv.org/html/2402.03292},
+  pdf={https://arxiv.org/pdf/2402.03292.pdf}
 }
 
 % 2021
+
 @inproceedings{le2021aspect,
   title={Aspect-Based Sentiment Analysis Using Mini-Window Locating Attention for Vietnamese E-commerce Reviews},
   author={Le-Minh, Binh and Le, Tuan-Phong and Tran, Khanh-Huyen and Bui, Khanh-Huyen and Le, Hoang-Quynh and Can, Duy-Cat and Thanh, Hoang-Nhat-Chau},
@@ -51,5 +63,6 @@
   pages={1--6},
   year={2021},
   organization={IEEE},
-  doi={10.1109/KSE51609.2021.9648637}
+  doi={10.1109/KSE51609.2021.9648637},
+  url={https://ieeexplore.ieee.org/document/9648637},
 }
