Update bibliography entries with abbreviations and enhance metadata; improve titles in about and CV pages for consistency

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,7 @@
 % 2025
 
 @article{rong2025algorithmic,
+  abbr={Nature Synth.},
   title={Algorithmic iterative reticular synthesis of zeolitic imidazolate framework crystals},
   author={Rong, Zichao and Chen, Zihao and Luong, Felix and Chheda, Saumil and Luong, Hien TN and Zheng, Zhaoyi and Greco, Kyle and Alghamdi, Abdulaziz A and Bui, Khanh-Huyen and Inizan, Tom J and others},
   journal={Nature Synthesis},
@@ -13,10 +14,12 @@
   doi={10.1038/s44160-025-00939-9},
   url={https://www.nature.com/articles/s44160-025-00939-9},
   html={https://www.nature.com/articles/s44160-025-00939-9},
-  pdf={https://www.nature.com/articles/s44160-025-00939-9.pdf}
+  pdf={https://www.nature.com/articles/s44160-025-00939-9.pdf},
+  bibtex_show={true}
 }
 
 @article{vu2025finding,
+  abbr={JSAMD},
   title={Finding environmental-friendly chemical synthesis with AI and high-throughput robotics},
   author={Vu, Van-Hao and Bui, Khanh-Huyen and Dang, Kieu-Dung D and Duong-Tuan, Manh and Le, Dung D and Nguyen-Dang, Tung},
   journal={Journal of Science: Advanced Materials and Devices},
@@ -28,11 +31,13 @@
   doi={10.1016/j.jsamd.2024.100818},
   url={https://doi.org/10.1016/j.jsamd.2024.100818},
   html={https://doi.org/10.1016/j.jsamd.2024.100818},
-  pdf={https://www.sciencedirect.com/science/article/pii/S2468217924001497/pdfft?md5=99106cffa79fb6f46df55f715383ee49&pid=1-s2.0-S2468217924001497-main.pdf}
+  pdf={https://www.sciencedirect.com/science/article/pii/S2468217924001497/pdfft?md5=99106cffa79fb6f46df55f715383ee49&pid=1-s2.0-S2468217924001497-main.pdf},
+  bibtex_show={true}
 }
 
 % 2024
 @inproceedings{dao2024experience,
+  abbr={EMNLP},
   title={Experience as Source for Anticipation and Planning: Experiential Policy Learning for Target-driven Recommendation Dialogues},
   author={Dao, Huy Quang and Deng, Yang and Bui, Khanh-Huyen and Le, Dung D and Liao, Lizi},
   booktitle={Findings of the Association for Computational Linguistics: EMNLP 2024},
@@ -40,10 +45,12 @@
   year={2024},
   publisher={Association for Computational Linguistics},
   url={https://aclanthology.org/2024.findings-emnlp.829/},
-  pdf={https://aclanthology.org/2024.findings-emnlp.829.pdf}
+  pdf={https://aclanthology.org/2024.findings-emnlp.829.pdf},
+  bibtex_show={true}
 }
 
 @article{nguyen2024detecting,
+  abbr={WACV},
   title={Detecting Out-of-Distribution Objects through Class-Conditioned Inpainting},
   author={Nguyen, Quang-Huy and Zhou, Jin Peng and Liu, Zhenzhen and Bui, Khanh-Huyen and Weinberger, Kilian Q and Chao, Wei-Lun and Le, Dung D},
   journal={arXiv preprint arXiv:2402.03292},
@@ -51,12 +58,14 @@
   note={Accepted to WACV 2026},
   url={https://arxiv.org/abs/2402.03292},
   html={https://arxiv.org/html/2402.03292},
-  pdf={https://arxiv.org/pdf/2402.03292.pdf}
+  pdf={https://arxiv.org/pdf/2402.03292.pdf},
+  bibtex_show={true}
 }
 
 % 2021
 
 @inproceedings{le2021aspect,
+  abbr={KSE},
   title={Aspect-Based Sentiment Analysis Using Mini-Window Locating Attention for Vietnamese E-commerce Reviews},
   author={Le-Minh, Binh and Le, Tuan-Phong and Tran, Khanh-Huyen and Bui, Khanh-Huyen and Le, Hoang-Quynh and Can, Duy-Cat and Thanh, Hoang-Nhat-Chau},
   booktitle={2021 13th International Conference on Knowledge and Systems Engineering (KSE)},
@@ -65,4 +74,5 @@
   organization={IEEE},
   doi={10.1109/KSE51609.2021.9648637},
   url={https://ieeexplore.ieee.org/document/9648637},
+  bibtex_show={true}
 }
