Update bibliography entries with DOIs and enhance social media links for consistency

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -44,6 +44,7 @@
   pages={14179--14198},
   year={2024},
   publisher={Association for Computational Linguistics},
+  doi={10.18653/v1/2024.findings-emnlp.829},
   url={https://aclanthology.org/2024.findings-emnlp.829/},
   pdf={https://aclanthology.org/2024.findings-emnlp.829.pdf},
   bibtex_show={true}
@@ -56,6 +57,7 @@
   journal={arXiv preprint arXiv:2402.03292},
   year={2024},
   note={Accepted to WACV 2026},
+  doi={10.48550/arXiv.2402.03292},
   url={https://arxiv.org/abs/2402.03292},
   html={https://arxiv.org/html/2402.03292},
   pdf={https://arxiv.org/pdf/2402.03292.pdf},
